Attempt at fixing overflow hidden on mobile for map

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -44,7 +44,7 @@
     background-color: #484848;
     height: 300px;
     border-radius: 10px;
-    overflow: hidden;
+    overflow: hidden !important;
 }
 
 .icon {
